[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimic_utils"
version = "1.0.0"
authors = [
  { name="Alistair Johnson", email="aewj@mit.edu" },
]
description = "Utilities to support building and analyzing the MIMIC database(s)"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlglot~=30.11",
    "pandas>=1.3",
    "numpy>=1.21",
    "tqdm>=4.60",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "duckdb>=0.9",
    "sqlfluff~=4.1",
]
equivalence = [
    "duckdb>=0.9",
    "psycopg2-binary>=2.9",
    "pandas>=1.3",
    "numpy>=1.21",
]

[project.scripts]
mimic_utils = "mimic_utils.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
"Homepage" = "https://github.com/MIT-LCP/mimic-code"
"Bug Tracker" = "https://github.com/MIT-LCP/mimic-code/issues"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = ["src/mimic_utils"]

[tool.hatch.build.targets.wheel]
packages = ["src/mimic_utils"]